Add sticky navigation bar to index.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
   </style>
 </head>
 <body>
-
+<nav style="position:sticky;top:0;background:#fff;padding:10px;text-align:center;box-shadow:0 2px 4px rgba(0,0,0,0.1);z-index:100;">
+  <a href="#items-container" style="margin:0 12px;">Pizza Menu</a>
+  <a href="#cart-summary" style="margin:0 12px;">Cart</a>
+</nav>
   <header class="page-header">
     <img src="https://ssprodst.blob.core.windows.net/logos/357/57fe989a-53fb-4800-8a8a-43c5b406ec0d-04-29-2025-02-33-35-813.png" alt="Waconia Hockey Logo" class="logo" />
     <h1>Waconia Hockey B1 Gold Pizza Fundraiser</h1>
