Update pizza descriptions for clarity

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ const pizzas = [
   {
     name: "Inferno",
     price: 13.00,
-    desc: "For those who like it spicy, a combo of sausage, pepperoni, mozzarella and jalapeños.",
+    desc: "Spicy combo of sausage, pepperoni, mozzarella and jalapeños.",
     image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/Inferno.webp"
   },
   {
@@ -254,7 +254,7 @@ const pizzas = [
   {
     name: "BCB",
     price: 14.00,
-    desc: "A Bacon Cheese Burger pizza topped with beef, cheese, and bacon.",
+    desc: "Bacon Cheese Burger pizza topped with beef, cheese, and bacon.",
     image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/BCB.webp"
   },
   {
