--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ const pizzas = [
     name: "Cauliflower Crust Chicken Alfredo",
     price: 14.75,
     desc: "White chicken, alfredo sauce, and mozzarella on gluten-free crust.",
-    image: "https://raw.githubusercontent.com/neudof/WaconiaSquirtB2GoldFundraiser/main/images/CauliflowerCrustChickenAlfredo.webp"
+    image: "https://github.com/neudof/WaconiaSquirtB2GoldFundraiser/blob/main/images/CauliflowerCrustChickenAlfredo.webp"
   }
 ];
 
