Update image URL for Cauliflower Crust Chicken Alfredo

--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ const pizzas = [
     name: "Cauliflower Crust Chicken Alfredo",
     price: 14.75,
     desc: "White chicken, alfredo sauce, and mozzarella on gluten-free crust.",
-    image: "https://github.com/neudof/WaconiaSquirtB2GoldFundraiser/blob/main/images/CauliflowerCrustChickenAlfredo.webp"
+    image: "https://neduof.github.io/WaconiaSquirtB2GoldFundraiser/images/CauliflowerCrustChickenAlfredo.webp"
   }
 ];
 
