--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@ const pizzas = [
     name: "Cauliflower Crust Chicken Alfredo",
     price: 14.75,
     desc: "White chicken, alfredo sauce, and mozzarella on gluten-free crust.",
-    image: "https://neduof.github.io/WaconiaSquirtB2GoldFundraiser/images/CauliflowerCrustChickenAlfredo.webp"
+    <img src=images/CauliflowerCrustChickenAlfredo.webp/>
   }
 ];
 
