--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
     <p id="cartTotal" style="font-weight:bold;text-align:right;margin-top:12px;"></p>
 
     <h3>Checkout</h3>
-    <form id="checkoutForm" onsubmit="submitOrder(); return false;">
-      <input type="text" id="name" placeholder="Your Name" required style="width:100%;margin:8px 0;padding:10px;" />
-      <input type="email" id="email" placeholder="Email" required style="width:100%;margin:8px 0;padding:10px;" />
-      <input type="tel" id="phone" placeholder="Phone Number" required style="width:100%;margin:8px 0;padding:10px;" />
-      <input type="text" id="address" placeholder="Delivery Address" required style="width:100%;margin:8px 0;padding:10px;" />
+<form id="checkoutForm" onsubmit="return false;">
+  <input type="text" id="name" placeholder="Your Name" required style="width:100%;margin:8px 0;padding:10px;" />
+  <input type="email" id="email" placeholder="Email" required style="width:100%;margin:8px 0;padding:10px;" />
+  <input type="tel" id="phone" placeholder="Phone Number" required style="width:100%;margin:8px 0;padding:10px;" />
+  <input type="text" id="address" placeholder="Delivery Address" required style="width:100%;margin:8px 0;padding:10px;" />
 
-      <label><input type="radio" name="payment" value="venmo" checked /> Pay with Venmo (@WaconiaHockeyB1Gold)</label><br />
-      <label><input type="radio" name="payment" value="delivery" /> Pay on Delivery/Pickup</label><br />
-
-      <button type="submit" style="margin-top:12px;padding:10px 20px;background:#3d95ce;color:white;border:none;border-radius:6px;">Submit Order</button>
-    </form>
+  <div style="margin-top:16px; display: flex; gap: 12px; flex-wrap: wrap;">
+    <button onclick="submitOrder('venmo')" style="flex:1; padding:12px; background:#3d95ce; color:white; border:none; border-radius:6px;">Pay Now with Venmo</button>
+    <button onclick="submitOrder('delivery')" style="flex:1; padding:12px; background:#555; color:white; border:none; border-radius:6px;">Pay on Pickup/Delivery (Cash or Check)</button>
+  </div>
+</form>
   </div>
 
   <script>
